# Disha-InnovAIT

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/web/src/: index.css  main.jsx
config/: agronomy.yaml  settings.yaml
data/processed/: balance_report.txt  balance_summary.json  business_case.json  cate_frozen.parquet  dgp_gate.json  lift_probe.json  monthly_panel.parquet  ope.json  outcomes.jsonl  signal_cate_correlations.json  signals_panel.parquet  twin.parquet  uplift_eval.json  uplift_real_cate.parquet  uplift_synthetic_cate.parquet
disha/: __init__.py
disha/api/: __init__.py  main.py
disha/common/: data.py
disha/eval/: __init__.py  business_case.py  qini.py  residualized_qini.py
disha/ope/: __init__.py  evaluate.py
disha/optimizer/: __init__.py  distances.py  router.py
disha/signals/: __init__.py  base.py  correlations.py  demand.py  digital.py  disease.py  oos.py  run.py  window.py
disha/twin/: balance.py  build.py  dgp_gate.py  lift_probe.py  store.py  weather.py
disha/uplift/: __init__.py  dgp.py  learners.py  train.py
docs/: PITCH.md  PROGRESS.md  SOLUTION.md  VIDEO_SCRIPT.md
scripts/: audit_r_learner.py  diag_cate_seed_sensitivity.py  diag_independence_and_scale.py  diag_qini_scale_residualized.py  diag_signal_correlations.py
tests/: test_api.py  test_data_contract.py  test_headline_integrity.py  test_honesty_claims.py  test_independence.py  test_optimizer.py  test_signals.py  test_twin.py  test_uplift.py
(+39 files in other folders)
