[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disha"
version = "0.1.0"
description = "Deadline-Aware Field Force Co-Pilot — Syngenta AgriTech Hackathon 2026"
requires-python = ">=3.11"
dependencies = [
    # Core data
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    # ML / causal
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "shap>=0.45",
    "econml>=0.15",
    # Optimisation
    "ortools>=9.9",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    # Scientific stats
    "scipy>=1.13",
    # Utilities
    "python-dateutil>=2.9",
    "tqdm>=4.66",
    "tenacity>=8.3",
    "joblib>=1.4",
    "diskcache>=5.6",
    # Viz (notebooks)
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.21",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["disha"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
